crates/cadconvert-gui/check_output.txt
    Checking cadconvert-gui v0.1.0 (D:\ALGO\crates\cadconvert-gui)
error[E0507]: cannot move out of `*b` which is behind a shared reference
   --> crates\cadconvert-gui\src\main.rs:524:37
    |
524 |             let pts = bezier_points(*b, 32)
    |                                     ^^ move occurs because `*b` has type `Bezier2D`, which does not implement the `Copy` trait
    |
help: consider cloning the value if the performance cost is acceptable
    |
524 -             let pts = bezier_points(*b, 32)
524 +             let pts = bezier_points(b.clone(), 32)
    |

warning: variable does not need to be mutable
   --> crates\cadconvert-gui\src\main.rs:553:9
    |
553 |     let mut a0 = start_deg.to_radians();
    |         ----^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of moved value: `b`
   --> crates\cadconvert-gui\src\main.rs:574:30
    |
570 | fn bezier_points(b: cadconvert_core::model::Bezier2D, segments: usize) -> Vec<CadVec2> {
    |                  - move occurs because `b` has type `Bezier2D`, which does not implement the `Copy` trait
571 |     let mut pts = Vec::with_capacity(segments + 1);
572 |     for i in 0..=segments {
    |     --------------------- inside of this loop
573 |         let t = i as f64 / segments as f64;
574 |         pts.push(bezier_eval(b, t));
    |                              ^ value moved here, in previous iteration of loop
    |
note: consider changing this parameter type in function `bezier_eval` to borrow instead if owning the value isn't necessary
   --> crates\cadconvert-gui\src\main.rs:579:19
    |
579 | fn bezier_eval(b: cadconvert_core::model::Bezier2D, t: f64) -> CadVec2 {
    |    -----------    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this parameter takes ownership of the value
    |    |
    |    in this function
help: consider moving the expression out of the loop so it is only moved once
    |
572 ~     let mut value = bezier_eval(b, t);
573 ~     for i in 0..=segments {
574 |         let t = i as f64 / segments as f64;
575 ~         pts.push(value);
    |
help: consider cloning the value if the performance cost is acceptable
    |
574 |         pts.push(bezier_eval(b.clone(), t));
    |                               ++++++++

Some errors have detailed explanations: E0382, E0507.
For more information about an error, try `rustc --explain E0382`.
warning: `cadconvert-gui` (bin "cadconvert-gui") generated 1 warning
error: could not compile `cadconvert-gui` (bin "cadconvert-gui") due to 2 previous errors; 1 warning emitted
